Prepare release 1.0.0-alpha13

--- a/DRUPAL_ORG_DESCRIPTION.html
+++ b/DRUPAL_ORG_DESCRIPTION.html
@@ -90,7 +90,7 @@ AI:  Creates the content type, taxonomies, fields, role, and permissions</pre>
 <h3>MCP Transports</h3>
 <ul>
   <li><strong>Recommended (local):</strong> <code>mcp_tools_stdio</code> — STDIO server via Drush.</li>
-  <li><strong>Experimental (remote):</strong> <code>mcp_tools_remote</code> — HTTP endpoint with API key authentication (intended for trusted networks).</li>
+  <li><strong>Experimental (remote):</strong> <code>mcp_tools_remote</code> — HTTP endpoint with API key authentication + optional IP allowlist and key TTL (intended for trusted networks).</li>
   <li><strong>Optional compatibility:</strong> <code>mcp_tools_mcp_server</code> — bridge to <code>drupal/mcp_server</code> when upstream is stable.</li>
 </ul>
 
